--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<p>ユーザープロフィール画像</p>
+<%= image_tag @user.get_profile_image(100,100) %>
+<p>ユーザー名<p>
+<% if @user == current_user %>
+  <%= link_to 'プロフィール編集', edit_user_path(@user.id) %>
+<% end %>
+
+<% @post_image.each do |post_image| %>
+  <%= link_to post_image_path(post_image.id) do %>
+    <%= image_tag post_image.get_image %>
+  <% end %>
+  <%= image_tag post_image.user.get_profile_image(100,100) %>
+  <%= post_image.caption %>
+  <%= post_image.user.name %>
+<% end %>
