--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -12,3 +12,20 @@
 <% if @post_image.user == current_user %>
   <%= link_to '削除',post_image_path, method: :delete , data: {confirm: 'Are you sure?'} %>
 <% end %>
+
+<p>コメント件数</p>
+<%= @post_image.post_comments.count %>件コメント
+<% @post_image.post_comments.each do |post_comment| %>
+  <%= image_tag post_comment.user.get_profile_image(50,50) %>
+  <%= post_comment.user.name %>
+  <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+  <% if post_comment.user == current_user %>
+    <%= link_to '削除',post_image_post_comment_path(post_comment.post_image.id, post_comment.id), method: :delete %>
+  <% end %>
+<% end %>
+
+<%= form_with model: [@post_image, @post_comment] do |f| %>
+  <label for= "inputname">コメントする</label>
+  <%= f.text_area :comment, id:"inputname", autofocus: true, placeholder:"コメントする" %>
+  <%= f.submit '送信する' %>
+<% end %>
