--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,4 +12,5 @@
   <%= image_tag post_image.user.get_profile_image(100,100) %>
   <%= post_image.caption %>
   <%= post_image.user.name %>
+  <%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id) %>
 <% end %>
